refactor: Merging with new version of code
Implemented various Power-Up classes (ExpandPaddle, ShrinkPaddle, ReversePaddle, etc.) to enhance gameplay. Updated PaddleViewManager to manage clones effectively and adjusted related components for better performance.